# ascii-art

./: CMakeLists.txt  README.md  main.cpp
include/: Art.h  Chunk.h  Dimensions.h  Processor.h
src/: Art.cpp  Chunk.cpp
